--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  flutter_local_notifications: ^17.1.2
+  flutter_local_notifications: ^15.1.0+1
   sqflite: ^2.3.3+1
+  timezone: ^0.9.3
+  path: ^1.9.0
+  flutter_bloc: ^8.1.6
+  equatable: ^2.0.5
+  date_time_picker: ^2.1.0
 
 dev_dependencies:
   flutter_test:
